<resources>
    <string name="app_name">Popular Libraries</string>
    <string name="main_activity_first_button">First Button</string>
    <string name="main_activity_second_button">Second Button</string>
    <string name="main_activity_third_button">Third Button</string>
    <string name="exit">Exit</string>
    <string name="main_menu_item_exit">Exit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="same_text">Same Text</string>
    <string name="fork_count">Forks Count</string>
    <string name="tittle">Tittle</string>
    <string name="id">Id</string>
</resources>